# subhkl

./: .dockerignore  .gitignore  .pre-commit-config.yaml  2IhsN5QO.tiff  ADVERSARY.md  Dockerfile  README.md  README_sinkhorn.md  convex_hull.md  environment.yml  mandi_mesolite_tutorial.md  mantid-environment.yml  pyproject.toml  run_all_imagine.sh  run_all_mandi_multi.sh  run_all_mandi_multi_beta.sh  run_one_mandi.sh
docs/: conf.py  index.rst
examples/: mandi_multi_run.sh
source/: index.rst
src/subhkl/: shim.py  (+15 more)
tests/: 5vnq_mandi.h5  README.md  analyze_peak_finder.py  conftest.py  generate_test_data.py  meso_2_15min_2-0_4-5_078_find.pgf  meso_2_15min_2-0_4-5_078_index.pgf  meso_2_15min_2-0_4-5_078_integrate.pgf  meso_2_15min_2-0_4-5_078_predict.pgf  mesolite_imagine.h5  sucrose_mandi.h5  test_1_to_n_goniometer_mapping.py  test_bootstrap_refinement.py  test_correctness_proof.py  test_cosine_argument_crash.py  test_cosine_indexer_regression.py  test_cosine_loss_instability.py  test_cosine_score_unit.py  test_cosine_synthetic.py  test_detector_crash.py  test_detector_indexing.py  test_duel_repro.py  test_duel_synthetic.py  test_finder_integration.py  test_finder_non_determinism.py  test_findub_offset_vulnerability.py  test_forbidden_reflections_bug.py  test_gaussian_refinement.py  test_gonio_mapping_vulnerability.py  test_gonio_vulnerability.py  test_imagine.py  test_imagine_convex_hull.py  test_indexer_cli_crash.py  test_indexer_shape_crash.py  test_indexer_synthetic.py  test_integration.py  test_integration_worker_regressions.py  test_jax_goniometer_broadcasting.py  (+32 more)
(+63 files in other folders)
